# otl-nix-cxx-example

./: CMakeLists.txt  flake.nix  main.cpp
